[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development", "rendering", "graphics"]
description = "Asset loader plugin for Bevy that adds support for lospec color palettes"
edition = "2021"
keywords = ["gamedev", "bevy", "palette"]
license = "MIT OR Apache-2.0"
name = "bevy_lospec"
repository = "https://github.com/johanhelsing/bevy_lospec"
version = "0.4.0"

[dependencies]
anyhow = "1.0"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "8ec8149", default-features = false, features = [
    "bevy_render", # for Color
    "bevy_asset"
]}
serde = "1.0"
serde_json = "1.0"
